# rise_above

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  main.rs  util.rs
crates/collisions/: up.cha
crates/collisions/assets/: selection.wgsl
crates/collisions/src/: agent.rs  libaaa.rs  main.rs  util.rs
crates/creature_creatorz/: Cargo.toml  damn.cha  my_character1.cha  stratolopusarealus.cha
crates/creature_creatorz/assets/: character.wgsl
crates/creature_creatorz/examples/: main.rs
crates/creature_creatorz/src/: lib.rs  main.rs  selection.rs
crates/creature_creatorz/wasm/: index.html
crates/energy/: notme.cha
crates/energy/src/: agent.rs  encoding.rs  inputs.rs  main.rs  util.rs
crates/finishit/: Cargo.toml
crates/finishit/src/: agent.rs  bah.cha  cam.rs  character.wgsl  choloreaT.cha  franky.cha  guardian.cha  lib.rs  libaaa.rs  main.rs  piko.cha  rox.cha  util.rs
crates/spawn_all/: bunch.cha  my_character0.cha
crates/spawn_all/src/: agent.rs  cam.rs  main.rs  move.rs  util.rs
src/: ai.rs  main.rs
