[package]
name = "ai"
version = "0.1.0"
edition = "2021"



[dependencies]
bevy = { version = "0.6.1", default-features = true, features = [  "render", "x11", "filesystem_watcher"] }
bytemuck = "1.7"
bevy-inspector-egui = "0.8"

serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
rfd = "0.5.1"

rand = "0.8.5"
strum_macros = "0.24.0"
strum = "0.24.0"
kdtree = "0.6.0"



